--- a/.gitattributes
+++ b/.gitattributes
@@ -3,6 +3,7 @@
 ###############################################################################
 * text=auto
 
+Content/** filter=lfs diff=lfs merge=lfs -text
 ###############################################################################
 # Set default behavior for command prompt diff.
 #
